margin on mobile fully fixed

--- a/css/style.css
+++ b/css/style.css
@@ -629,6 +629,10 @@ video {
   margin-top: 14rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .flex {
   display: flex;
 }
